steam module redo
- image handling
- proper tables
- image component (just in case)
